# minimalist-music-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  package.json.vite  vis-test.html  vite.config.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/themes/: material.css  skeuomorphic-1.css  skeuomorphic-2.css
src/core/: db.js  event-bus.js  fs.js  metadata.js  native.js  playlist.js  prefs.js  quotes.js  shortcuts.js  state.js  util.js
src/explorer/: explorer.css  explorer.js
src/main/: atomic.css  icon-font.css  main.js  reset.css  styles.css
src/metadata/: metadata-store.js  metadata.js  music-metadata-browser.js  visualizer.js
src/player/: player-ui.js  player.js  playlist.js  session.js  visualizer.js
src/src/core/: event-bus.js  fs.js  metadata.js  playlist.js  prefs.js  state.js  tauri.js
src/src/explorer/: explorer.css  explorer.js
src/src/main/: atomic.css  icon-font.css  main.js  styles.css
src/src/player/: player-ui.js  player.js  visualizer.js
src/src/toolbar/: breadcrumb-bar.css  breadcrumb-bar.js  toolbar.js
src/toolbar/: breadcrumb-bar.css  breadcrumb-bar.js  toolbar.js
