[package]
name = "minimalist-music"
version = "1.4.2"
description = "A folder-based, minimalistic, neumorphic music player"
authors = ["muhammad mohsen"]
license = "MIT"
repository = "https://github.com/Muhammad-Mohsen/minimalist-music-tauri"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "window-set-title", "protocol-asset", "dialog-open", "fs-all", "window-set-size", "path-all", "shell-open", "window-close", "window-minimize", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
